[gd_scene load_steps=4 format=3 uid="uid://di8ue1d4erf3f"]

[ext_resource type="Script" path="res://Cont_4/cont_4.gd" id="1_17doa"]
[ext_resource type="Texture2D" uid="uid://bag55cv02wxus" path="res://Gfx/2d_chessboard.png" id="1_xbwa5"]
[ext_resource type="PackedScene" uid="uid://kk5gfcudlx04" path="res://Cont_4/block_c4.tscn" id="2_dmr6d"]

[node name="Cont_4" type="Node2D"]
script = ExtResource("1_17doa")

[node name="Back" type="Node2D" parent="."]
visible = false
position = Vector2(128, 255)

[node name="Background" type="Sprite2D" parent="Back"]
scale = Vector2(0.427, 0.427)
texture = ExtResource("1_xbwa5")

[node name="Background2" type="Sprite2D" parent="Back"]
position = Vector2(1025, 0)
scale = Vector2(0.427, 0.427)
texture = ExtResource("1_xbwa5")

[node name="Block1" parent="." instance=ExtResource("2_dmr6d")]
modulate = Color(1, 0, 1, 1)
position = Vector2(395, 184)

[node name="Block2" parent="." node_paths=PackedStringArray("parent_block") instance=ExtResource("2_dmr6d")]
position = Vector2(226, 186)
parent_block = NodePath("../Block1")

[node name="Block3" parent="." node_paths=PackedStringArray("parent_block") instance=ExtResource("2_dmr6d")]
position = Vector2(55, 187)
parent_block = NodePath("../Block2")
last_cube = true
